# multi-robot-coverage

./: .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: entrypoint.sh
multi_robot_coverage/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
multi_robot_coverage/config/: coverage.rviz  params.yaml
multi_robot_coverage/launch/: coverage_demo.launch.py
multi_robot_coverage/maps/: obstacle_room.pgm  obstacle_room.yaml  simple_room.pgm  simple_room.yaml  warehouse.pgm  warehouse.yaml
multi_robot_coverage/multi_robot_coverage/: __init__.py  benchmark.py  map_generator.py
multi_robot_coverage/multi_robot_coverage/algorithms/: __init__.py  astar.py  boustrophedon.py  frontier_based.py  random_walk.py  simple_boustrophedon.py
multi_robot_coverage/multi_robot_coverage/nodes/: coverage_coordinator.py  map_server.py  robot_agent.py  visualizer.py
multi_robot_coverage/test/: test_astar.py  test_boustrophedon.py  test_frontier.py
multi_robot_coverage_msgs/: CMakeLists.txt  package.xml
multi_robot_coverage_msgs/msg/: AlgorithmComparison.msg  CoverageStats.msg
results/: obstacle_room_boustrophedon.json  obstacle_room_frontier.json  obstacle_room_simple_boustrophedon.json  simple_room_boustrophedon.json  simple_room_random_walk.json  warehouse_boustrophedon.json  warehouse_simple_boustrophedon.json
web_dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web_dashboard/src/: App.jsx  index.css  (+1 more)
(+13 files in other folders)
